backend/api/tests/integration/jig/snapshots/integration__jig__cover__create_default.snap
---
source: tests/integration/jig/cover.rs
expression: body.jig.modules

---
[
  {
    "id": "[id]",
    "kind": "Cover"
  },
  {
    "id": "[id]",
    "kind": null
  }
]
