backend/api/tests/integration/jig/snapshots/integration__jig__cover__create_with_non_cover.snap
---
source: tests/integration/jig/cover.rs
expression: body.jig.modules

---
[
  {
    "id": "[id]",
    "kind": "Cover"
  },
  {
    "id": "[id]",
    "kind": "TappingBoard"
  }
]
